# MetaC

./: .gitignore  README.md
MVP/: chatGPTLexer.cpp  test.cpp
MVP2/mcc/: .gitignore  CMakeLists.txt
MVP2/mcc/src/: lexer.h  main.cpp
MVP2/mcc/tests/: test_main.cpp
MetaC-vault/.obsidian/: workspace.json
MetaC-vault/Standard/: Brein strom.md  Standard.md
MetaC-vault/Standard/1 Basic/: 1 2 Symbols.md
MetaC-vault/Standard/1. Basic/: 1.0 Test.md  1.1 Symbols.md  1.1 О языке.md  Symbols.md
MetaC-vault/Standard/2 Переменные и типы/: 2 1 Базовая иерархия типов.md  2 10 Оператор имени.md  2 2 Объявления переменной.md  2 3 Строки.md  2 4 Указатели и ссылки.md  2 5 Владение и мета состояние.md  2 5 Владение.md  2 5 Указатели и ссылки.md  2 6 Операторы над типами.md  2 6 Приведение типов.md  2 7 Диапазоны и итераторы.md  2 7 Диапазоны.md  2 7 Операции над типами.md  2 8 Массивы и кортежи.md  2 8 Оператор анонимной переменной.md
MetaC-vault/Standard/2. Variables and types/: 2.1 basic type hierarchy.md  2.1 Базовая иерархия типов.md  2.2 Объявления переменной.md  2.3 Строки.md  2.5 Указатели.md  2.5 Укахатели.md  2.6 Типы.md
MetaC-vault/Standard/2. Переменные и типы/: 2.1 Базовая иерархия типов.md  2.2 Объявления переменной.md  2.6 Операторы над типами.md  2.6 Типы.md  2.7 Диапазоны.md  2.8 Оператор анонимной переменной.md
MetaC-vault/Standard/3 Операторы/: 3 1 if.md  3 2 Контейнеры.md  3 2 Циклы.md  3 4 Enum и match.md  (+4 more)
TestExec/: TestExec.cpp  TestExec.sln  TestExec.vcxproj  TestExec.vcxproj.filters
markdown/: README.html  README.md  main.py  theme.css
(+64 files in other folders)
